# cockpit-crm-core-django

./: .dockerignore  .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml
auth/: permissions.py
auth/config/: settings.py
cockpit/: apps.py
cockpit/config/: .env.sample  Dockerfile  settings.py
core/: settings.py
core/models/: base.py  mixins.py  scd2.py  uuid.py
core/models/hashdiff/: models.py
core/models/scd2/: admin.py  changes.py  constraints.py  models.py
core/utils/: orm.py
db/init/: extensions.sql
entities/: .env.sample  Dockerfile  admin.py  models.py  models_config.py  settings.py  urls.py
entities/config/: .env.sample  Dockerfile  settings.py
entities/forms/: admin.py
entities/migrations/: 0001_add_extensions.py  0001_initial.py  0002_initial.py  0002_remove_entity_entities_en_uuid_177390_btree_and_more.py  0003_entitydetail_unique_current_per_entity_uuid.py  0004_entitydetail_exclude_overlapping_entity_detail.py  0005_remove_entitydetail_exclude_overlapping_entity_detail_and_more.py
entities/v1/: docs.py  serializers.py  urls.py  views.py
entities/v1/tests/: pytest.ini  test_api.py
